example-crm-k3s/k3s/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-crm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel-crm
  template:
    metadata:
      labels:
        app: laravel-crm
    spec:
      containers:
      - name: laravel-app
        image: YOUR_DOCKERHUB_USER/laravel-crm:latest
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-crm-service
spec:
  type: NodePort
  selector:
    app: laravel-crm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      nodePort: 30080
