example-crm-k3s/k3s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-crm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: YOUR_PUBLIC_IP
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: laravel-crm-service
              port:
                number: 80
